--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=firefox
 url=https://qa.finworkserp.com/web/login
 expenses_manager_username=expensesmanager10@info.com
 expenses_manager_password=expensesmanager
