updated: -Driver class with InheritableThreadLocal for parallel testing -Hooks: After method is working now correctly -LoginPage_Mustafa: error solved -codes in LoginStepDef_Merve finished -Login_Page_Merve revised -Login Scenarios all passed

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,4 @@
-browser=firefox
+browser=chrome
 url=https://qa.finworkserp.com/web/login
 expenses_manager_username=expensesmanager10@info.com
 expenses_manager_password=expensesmanager
