--- a/configuration.properties
+++ b/configuration.properties
@@ -6,3 +6,4 @@ sales_manager_username=salesmanager15@info.com
 sales_manager_password=salesmanager
 store_manager_username=posmanager85@info.com
 store_manager_password=posmanager
+usertype= sales manager
